1st day of codes.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<h1>welcome to 243lla's domain.</h1>
-<h2>Contributor:243lla.</h2>
-<h3>owner:243lla</h3>
-<h4>coowner:243lla</h4>
+<html>
+    <head>
+        <title>WOLOLO</title>
+    </head>
+    <body style="background-color: goldenrod;">
+        <h1 style="text-align: center;">welcome to 243lla's domain.</h1>
+        <p>Contributor:243lla.</p>
+        <p>owner:243lla</p>
+        <p>coowner:243lla</p>
+        <p style="text-align: center; font-weight: bold; font-size: large;">here is some images.</p>
+        <img
+            style="width: 90%; display: block; margin-left: auto; margin-right: auto;"
+            src="https://cdn.discordapp.com/attachments/1038352402325176350/1111865816540000266/image.png"
+        >
+    </body>
+
+</html>
