--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <html>
     <head>
         <title>WOLOLO</title>
+        <style> 
+            @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap'); 
+            body {
+                background-color: goldenrod;
+            }
+            h1 {
+                font-family: 'Cherry Bomb One', cursive;
+            }
+            p {
+                color: #292828;
+            }
+        </style>
     </head>
-    <body style="background-color: goldenrod;">
+    <body >
         <h1 style="text-align: center;">welcome to 243lla's domain.</h1>
         <p>Contributor:243lla.</p>
         <p>owner:243lla</p>
@@ -12,6 +24,7 @@
             style="width: 90%; display: block; margin-left: auto; margin-right: auto;"
             src="https://cdn.discordapp.com/attachments/1038352402325176350/1111865816540000266/image.png"
         >
+        
     </body>
 
 </html>
