--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
         <style> 
             @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap'); 
             body {
-                background-color: goldenrod;
+                background-color: rgba(0, 0, 0, 0);
             }
             h1 {
                 font-family: 'Cherry Bomb One', cursive;
             }
             p {
-                color: #292828;
+                color: #ffffff;
             }
+            
         </style>
     </head>
     <body >
