--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 font-family: 'Cherry Bomb One', cursive;
             }
             p {
-                color: #ffffff;
+                color: #000000;
             }
             
         </style>
