I made BOBLOX :> from scratch.

--- a/index.html
+++ b/index.html
@@ -1,31 +1,80 @@
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <title>WOLOLO</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title> (2) [WRAPS] Drive World </title>
         <style> 
-            @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap'); 
-            body {
-                background-color: rgba(0, 0, 0, 0);
+            h1{
+                color: #FFFFFF;
             }
-            h1 {
-                font-family: 'Cherry Bomb One', cursive;
+            h2{
+                color: #FFFFFF;
             }
-            p {
-                color: #000000;
+            .acok-black{
+                color:#ffffff97;
             }
-            
         </style>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     </head>
-    <body >
-        <h1 style="text-align: center;">welcome to 243lla's domain.</h1>
-        <p>Contributor:243lla.</p>
-        <p>owner:243lla</p>
-        <p>coowner:243lla</p>
-        <p style="text-align: center; font-weight: bold; font-size: large;">here is some images.</p>
-        <img
+    <body data-bs-theme="dark">
+        <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="https://www.citypng.com/public/uploads/preview/-41606666379jzr7ve28uh.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    Boblox
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Discover</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Marketplace</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Create
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">New game</a></li>
+                        <li><a class="dropdown-item" href="#">Templates</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Need help?</a></li>
+                    </ul>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link enabled">Bobux</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+                </div>
+            </div>
+        </nav>
+        <div class="container">
+            <img
             style="width: 90%; display: block; margin-left: auto; margin-right: auto;"
-            src="https://cdn.discordapp.com/attachments/1038352402325176350/1111865816540000266/image.png"
-        >
-        
+            src="https://tr.rbxcdn.com/4fcd6b9e8634af02b1ce1123eb8a90b0/768/432/Image/Png"
+            >
+            <h1 class="text-light">🎨 [WRAPS] Drive World</h1>
+            <h4 class="text-muted">By Drive World | Twin Atlas</h4>    
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
+
+
+
+
+
+
+
+
+
 
 </html>
