hehe me use the image changing thingy called "carusel"

--- a/index.html
+++ b/index.html
@@ -58,23 +58,139 @@
             </div>
         </nav>
         <div class="container">
-            <img
+            <!-- <img
             style="width: 90%; display: block; margin-left: auto; margin-right: auto;"
             src="https://tr.rbxcdn.com/4fcd6b9e8634af02b1ce1123eb8a90b0/768/432/Image/Png"
-            >
+            > -->
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img
+                            src="https://tr.rbxcdn.com/4fcd6b9e8634af02b1ce1123eb8a90b0/768/432/Image/Png"
+                            class="d-block w-100"
+                            alt="..."
+                        >
+                    </div>
+                    <div class="carousel-item">
+                        <img
+                            src="https://tr.rbxcdn.com/c64b787a2bf012971bf1d651ac3d666c/768/432/Image/Png"
+                            class="d-block w-100"
+                            alt="..."
+                        >
+                    </div>
+                    <div class="carousel-item">
+                        <img
+                            src="https://tr.rbxcdn.com/fb700a1e34e05431bb821c923accf2fa/768/432/Image/Png"
+                            class="d-block w-100"
+                            alt="..."
+                        >
+                    </div>
+                    <div class="carousel-item">
+                        <img
+                            src="https://tr.rbxcdn.com/6c1ad66b199b1211d656e2f1cc0e6330/768/432/Image/Png"
+                            class="d-block w-100"
+                            alt="..."
+                        >
+                    </div>
+                    <div class="carousel-item">
+                        <img
+                            src="https://tr.rbxcdn.com/3cc13245bda82ef53f9cffafcbc612bc/768/432/Image/Png"
+                            class="d-block w-100"
+                            alt="..."
+                        >
+                    </div>
+                        <div class="carousel-item">
+                            <img
+                                src="https://tr.rbxcdn.com/4a0972dc6c119a1d273df6bf61e7f0f0/768/432/Image/Png"
+                                class="d-block w-100"
+                                alt="..."
+                            >
+                    </div>
+                    <div class="carousel-item">
+                        <img
+                            src="https://tr.rbxcdn.com/86d8b0f0053996d9deafef1c61fe96de/768/432/Image/Png"
+                            class="d-block w-100"
+                            alt="..."
+                        >
+                    </div>
+                    <div class="carousel-item">
+                        <img
+                            src="https://tr.rbxcdn.com/c1a4a86cbab7b59c023a4105547a5156/768/432/Image/Png"
+                            class="d-block w-100"
+                            alt="..."
+                        >
+                    </div>
+                    <div class="carousel-item">
+                        <img
+                            src="https://tr.rbxcdn.com/40a9ad9066fb099ead601e728303eba1/768/432/Image/Png"
+                            class="d-block w-100"
+                            alt="..."
+                        >
+                    </div>
+                    <div class="carousel-item">
+                        <img
+                            src="https://tr.rbxcdn.com/07cebc27579a19bd4a4c8965eb4c4df6/768/432/Image/Png"
+                            class="d-block w-100"
+                            alt="..."
+                        >
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
             <h1 class="text-light">🎨 [WRAPS] Drive World</h1>
             <h4 class="text-muted">By Drive World | Twin Atlas</h4>    
         </div>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">store</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">servers</a>
+            </li>
+          </ul>
+          <div class="container">
+            <p style="font-weight: bold;">Description</p>
+            <p>
+                🙏 TY FOR 110K LIKES!!! ➡️ USE CODE "CHECKED110K" FOR THE CHECKERED WRAP! 🏆
+            </p>
+            <p>
+                ✨ NEXT CODE AT 125K LIKES! ✨
+            </p>
+            <p>
+                May 26th Update!
+            </p>
+            <p>
+                🎨 Customize your car with new wraps now in the customization menu!
+                🏎️ Swappable backfire and nitrous effects are now available!
+                💰 New cars: Mori15 sports car, ZeroOne super car, & Particle track car!
+                🏆 New VIP game pass reward: "Golden Weave" Wrap
+                🔥 New weekly challenge car: Super4 Xtreme Sports Car
+                🏁 The Rally RS car is BACK as the barn find car!
+            </p>
+            <p>
+                -
+            </p>
+            <p>
+                💵 Earn money by driving fast, drifting and going off of jumps!
+                ⚔️ Compete in multiplayer races with other players!
+                ⚙️ Purchase upgrades like Turbos, Tires, Exhausts and more
+                🎨 In-depth visual customization with interiors
+            </p>
+            <p>
+                Join our communities to be the first to hear about updates, play tests, suggest new features/content and earn prizes!
+            </p>
+
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
-
-
-
-
-
-
-
-
-
-
 </html>
